--- a/POS2.ipynb
+++ b/POS2.ipynb
@@ -60,10 +60,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "wnu9D3YZoH2e",
-        "outputId": "ff41b3a9-9488-44e3-8ba6-8788b372dc33",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ff41b3a9-9488-44e3-8ba6-8788b372dc33"
       },
       "source": [
         "%tensorflow_version 1.x"
@@ -84,10 +84,10 @@
       "metadata": {
         "scrolled": true,
         "id": "yxFUBtb88aHq",
-        "outputId": "2aec8ef8-e5ca-452a-83d3-8664e3aada36",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b4e409ff-3ba2-4fa0-fe52-ffff488f9f86"
       },
       "source": [
         "import nltk\n",
@@ -139,11 +139,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "sAlXrDmU8aHs",
-        "outputId": "a3fbfdbd-1260-4cc6-def8-25a35f6eb676",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 157
-        }
+        },
+        "outputId": "a349bd37-a633-4efe-9b88-9358153c1c9a"
       },
       "source": [
         "from IPython.display import HTML, display\n",
@@ -216,10 +216,10 @@
       "metadata": {
         "collapsed": true,
         "id": "ZXK_k-mo8aHt",
-        "outputId": "c030ff0d-69d6-46ce-efdd-b6f23b182522",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "43b92714-316e-4bbb-8f8f-68b4c4f41861"
       },
       "source": [
         "from collections import Counter\n",
@@ -296,10 +296,10 @@
       "metadata": {
         "collapsed": true,
         "id": "BCaE-i5u8aHu",
-        "outputId": "48524955-8963-43b1-c6f1-6d94f2095e10",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "426bb6b4-46d8-457c-9ab5-14783b9a8952"
       },
       "source": [
         "batch_words, batch_tags = zip(*[zip(*sentence) for sentence in data[-3:]])\n",
@@ -361,11 +361,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OQeb8d5j8aHv",
-        "outputId": "f27711af-0ea2-448f-9108-04e38e86b66e",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "OQeb8d5j8aHv"
       },
       "source": [
         "import keras\n",
@@ -382,24 +378,7 @@
         "model.add(stepwise_dense)"
       ],
       "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Using TensorFlow backend.\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "WARNING:tensorflow:From /tensorflow-1.15.2/python3.7/tensorflow_core/python/ops/resource_variable_ops.py:1630: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "If using Keras pass *_constraint arguments to layers.\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -494,10 +473,10 @@
       "metadata": {
         "collapsed": true,
         "id": "5eJGEWu58aHx",
-        "outputId": "80424a28-c972-4489-a9b1-ca5758143ccd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a5293b4c-2111-4968-8715-2dfd04b17754"
       },
       "source": [
         "model.compile('adam','categorical_crossentropy')\n",
@@ -511,58 +490,67 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "WARNING:tensorflow:From /tensorflow-1.15.2/python3.7/tensorflow_core/python/ops/math_grad.py:1424: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
-            "WARNING:tensorflow:From /tensorflow-1.15.2/python3.7/keras/backend/tensorflow_backend.py:422: The name tf.global_variables is deprecated. Please use tf.compat.v1.global_variables instead.\n",
-            "\n",
-            "Epoch 1/5\n",
-            "1344/1343 [==============================] - 23s 17ms/step - loss: 0.2753\n",
-            "\n",
+            "Epoch 1/5\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:4: UserWarning: `Model.fit_generator` is deprecated and will be removed in a future version. Please use `Model.fit`, which supports generators.\n",
+            "  after removing the cwd from sys.path.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1343/1343 [============================>.] - ETA: 0s - loss: 0.2371\n",
             "Measuring validation accuracy...\n",
-            "14335/14335 [==============================] - 4s 290us/step\n",
+            "448/448 [==============================] - 6s 14ms/step\n",
             "\n",
-            "Validation accuracy: 0.93990\n",
+            "Validation accuracy: 0.94051\n",
             "\n",
+            "1343/1343 [==============================] - 81s 57ms/step - loss: 0.2370\n",
             "Epoch 2/5\n",
-            "1344/1343 [==============================] - 22s 17ms/step - loss: 0.0598\n",
-            "\n",
+            "1344/1343 [==============================] - ETA: 0s - loss: 0.0580\n",
             "Measuring validation accuracy...\n",
-            "14335/14335 [==============================] - 4s 287us/step\n",
+            "448/448 [==============================] - 6s 14ms/step\n",
             "\n",
-            "Validation accuracy: 0.94341\n",
+            "Validation accuracy: 0.94545\n",
             "\n",
+            "1343/1343 [==============================] - 81s 61ms/step - loss: 0.0580\n",
             "Epoch 3/5\n",
-            "1344/1343 [==============================] - 22s 17ms/step - loss: 0.0523\n",
-            "\n",
+            "1344/1343 [==============================] - ETA: 0s - loss: 0.0513\n",
             "Measuring validation accuracy...\n",
-            "14335/14335 [==============================] - 4s 284us/step\n",
+            "448/448 [==============================] - 6s 14ms/step\n",
             "\n",
-            "Validation accuracy: 0.94482\n",
+            "Validation accuracy: 0.94638\n",
             "\n",
+            "1343/1343 [==============================] - 78s 58ms/step - loss: 0.0513\n",
             "Epoch 4/5\n",
-            "1344/1343 [==============================] - 22s 16ms/step - loss: 0.0475\n",
-            "\n",
+            "1343/1343 [============================>.] - ETA: 0s - loss: 0.0470\n",
             "Measuring validation accuracy...\n",
-            "14335/14335 [==============================] - 4s 287us/step\n",
+            "448/448 [==============================] - 6s 14ms/step\n",
             "\n",
-            "Validation accuracy: 0.94607\n",
+            "Validation accuracy: 0.94690\n",
             "\n",
+            "1343/1343 [==============================] - 81s 60ms/step - loss: 0.0470\n",
             "Epoch 5/5\n",
-            "1344/1343 [==============================] - 22s 16ms/step - loss: 0.0433\n",
-            "\n",
+            "1344/1343 [==============================] - ETA: 0s - loss: 0.0430\n",
             "Measuring validation accuracy...\n",
-            "14335/14335 [==============================] - 4s 285us/step\n",
+            "448/448 [==============================] - 6s 14ms/step\n",
             "\n",
-            "Validation accuracy: 0.94492\n",
-            "\n"
+            "Validation accuracy: 0.94619\n",
+            "\n",
+            "1343/1343 [==============================] - 77s 57ms/step - loss: 0.0430\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.callbacks.History at 0x7f7e33633890>"
+              "<keras.callbacks.History at 0x7f34301cb990>"
             ]
           },
           "metadata": {},
@@ -584,10 +572,10 @@
       "metadata": {
         "collapsed": true,
         "id": "tHgxnYB68aHy",
-        "outputId": "be909e5d-2f2c-4574-c240-c93431c0d8ea",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5c781379-77ca-4a90-e35c-5787e62e20a9"
       },
       "source": [
         "acc = compute_test_accuracy(model)\n",
@@ -601,8 +589,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "14335/14335 [==============================] - 4s 295us/step\n",
-            "Final accuracy: 0.94492\n"
+            "448/448 [==============================] - 6s 14ms/step\n",
+            "Final accuracy: 0.94619\n"
           ]
         }
       ]
@@ -639,14 +627,14 @@
         "\n",
         "model.add(L.InputLayer([None],dtype='int32'))\n",
         "model.add(L.Embedding(len(all_words),50))\n",
-        "model.add(L.Bidirectional(LSTM(10, return_sequences=True)))\n",
+        "model.add(L.Bidirectional(LSTM(64, return_sequences=True)))\n",
         "\n",
         "#add top layer that predicts tag probabilities\n",
         "stepwise_dense = L.Dense(len(all_tags),activation='softmax')\n",
         "stepwise_dense = L.TimeDistributed(stepwise_dense)\n",
         "model.add(stepwise_dense)\n"
       ],
-      "execution_count": 16,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -654,10 +642,10 @@
       "metadata": {
         "collapsed": true,
         "id": "Ort64W348aHz",
-        "outputId": "e92bf288-4865-4c7b-9dab-ef1784940805",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ac99dda2-46d2-4d47-8820-e952bf00f4b9"
       },
       "source": [
         "model.compile('adam','categorical_crossentropy')\n",
@@ -665,63 +653,77 @@
         "model.fit_generator(generate_batches(train_data),len(train_data)/BATCH_SIZE,\n",
         "                    callbacks=[EvaluateAccuracy()], epochs=5,)"
       ],
-      "execution_count": 17,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 1/5\n",
-            "1344/1343 [==============================] - 85s 63ms/step - loss: 0.4226\n",
-            "\n",
+            "Epoch 1/5\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:4: UserWarning: `Model.fit_generator` is deprecated and will be removed in a future version. Please use `Model.fit`, which supports generators.\n",
+            "  after removing the cwd from sys.path.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1340/1343 [============================>.] - ETA: 0s - loss: 0.2645\n",
             "Measuring validation accuracy...\n",
-            "14335/14335 [==============================] - 17s 1ms/step\n",
+            "448/448 [==============================] - 3s 6ms/step\n",
             "\n",
-            "Validation accuracy: 0.94072\n",
+            "Validation accuracy: 0.95388\n",
             "\n",
+            "1343/1343 [==============================] - 21s 12ms/step - loss: 0.2639\n",
             "Epoch 2/5\n",
-            "1344/1343 [==============================] - 83s 62ms/step - loss: 0.0645\n",
-            "\n",
+            "1339/1343 [============================>.] - ETA: 0s - loss: 0.0457\n",
             "Measuring validation accuracy...\n",
-            "14335/14335 [==============================] - 17s 1ms/step\n",
+            "448/448 [==============================] - 3s 6ms/step\n",
             "\n",
-            "Validation accuracy: 0.95259\n",
+            "Validation accuracy: 0.96031\n",
             "\n",
+            "1343/1343 [==============================] - 18s 13ms/step - loss: 0.0457\n",
             "Epoch 3/5\n",
-            "1344/1343 [==============================] - 83s 62ms/step - loss: 0.0491\n",
-            "\n",
+            "1341/1343 [============================>.] - ETA: 0s - loss: 0.0373\n",
             "Measuring validation accuracy...\n",
-            "14335/14335 [==============================] - 17s 1ms/step\n",
+            "448/448 [==============================] - 3s 6ms/step\n",
             "\n",
-            "Validation accuracy: 0.95734\n",
+            "Validation accuracy: 0.96295\n",
             "\n",
+            "1343/1343 [==============================] - 18s 13ms/step - loss: 0.0373\n",
             "Epoch 4/5\n",
-            "1344/1343 [==============================] - 83s 62ms/step - loss: 0.0423\n",
-            "\n",
+            "1340/1343 [============================>.] - ETA: 0s - loss: 0.0326\n",
             "Measuring validation accuracy...\n",
-            "14335/14335 [==============================] - 17s 1ms/step\n",
+            "448/448 [==============================] - 3s 6ms/step\n",
             "\n",
-            "Validation accuracy: 0.95960\n",
+            "Validation accuracy: 0.96386\n",
             "\n",
+            "1343/1343 [==============================] - 16s 12ms/step - loss: 0.0327\n",
             "Epoch 5/5\n",
-            "1344/1343 [==============================] - 83s 62ms/step - loss: 0.0382\n",
-            "\n",
+            "1343/1343 [============================>.] - ETA: 0s - loss: 0.0289\n",
             "Measuring validation accuracy...\n",
-            "14335/14335 [==============================] - 17s 1ms/step\n",
+            "448/448 [==============================] - 3s 6ms/step\n",
             "\n",
-            "Validation accuracy: 0.96108\n",
-            "\n"
+            "Validation accuracy: 0.96506\n",
+            "\n",
+            "1343/1343 [==============================] - 16s 12ms/step - loss: 0.0289\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.callbacks.History at 0x7f7dbc708910>"
+              "<keras.callbacks.History at 0x7f33aa63acd0>"
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 15
         }
       ]
     },
@@ -730,10 +732,10 @@
       "metadata": {
         "collapsed": true,
         "id": "iWHSkF648aHz",
-        "outputId": "abff8511-f3f6-453d-c5a7-52e71ca9fc43",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "86ed0e97-3da3-48ea-a962-ff66a9675183"
       },
       "source": [
         "acc = compute_test_accuracy(model)\n",
@@ -742,15 +744,15 @@
         "assert acc>0.96, \"Bidirectional RNNs are better than this!\"\n",
         "print(\"Well done!\")"
       ],
-      "execution_count": 18,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "14335/14335 [==============================] - 17s 1ms/step\n",
+            "448/448 [==============================] - 3s 6ms/step\n",
             "\n",
-            "Final accuracy: 0.96108\n",
+            "Final accuracy: 0.96506\n",
             "Well done!\n"
           ]
         }
